Tidy up comments

--- a/src/classes/MassDeleteBatch.cls
+++ b/src/classes/MassDeleteBatch.cls
@@ -9,8 +9,7 @@
 **/
 public class MassDeleteBatch implements Database.Batchable<SObject> {
 
-    // Add objects to this list to chain through objects and clear
-    // out all records
+    // Add objects to this list to chain through objects and clear out all records
     // Ensure to put child objects first, and ones that cause deletes to fail.
     public static final List<String> OBJECT_NAMES = new List<String>{
         'Case',
@@ -20,32 +19,33 @@ public class MassDeleteBatch implements Database.Batchable<SObject> {
         'Account'
     };
 
-    // The object name to query for and replace emails for
+    // The current object name being run within the batch
     public String currentObjectName;
 
     // Default Constructor to start on first object in list
     public MassDeleteBatch() {
-        // Start with the first object
         this.currentObjectName = OBJECT_NAMES[0];
     }
 
-    // Constructor to accept object name to process job for
+    // Constructor to accept object name to process job for/
+    // This is called in the finish method to process the next object
     public MassDeleteBatch(String objectName) {
         this.currentObjectName = objectName;
     }
 
-    // Query for all email fields for the object
+    // Query for all records in the current object
     public Database.QueryLocator start(Database.BatchableContext BC) {
-        // Return the query
         return Database.getQueryLocator('SELECT Id FROM ' + currentObjectName);
     }
 
-    // Execute the records
+    // Delete all records for the given scope
     public void execute(Database.BatchableContext BC, List<SObject> scope) {
 
         delete scope;
     }
 
+    // Once finished on the current object, determine if there's another object
+    // to process, and if so, run the batch again on the next object
     public void finish(Database.BatchableContext BC) {
 
         // If we have a next object to process
@@ -58,15 +58,21 @@ public class MassDeleteBatch implements Database.Batchable<SObject> {
 
     // Determine which object to do next
     public String getNextObject() {
-
+        
+        // Iterate over the objects in the list
         for (Integer i = 0; i < OBJECT_NAMES.size(); i++) {
 
+            // If this is the current object in the list, get the next
+            // item in the list
             if (currentObjectName == OBJECT_NAMES[i]) {
 
                 try {
 
+                    // Return the next object in list
                     return OBJECT_NAMES[i + 1];
                 }
+                // Will fail silently if object isn't found. Will mean
+                // We're at end of list so we can stop
                 catch (Exception ex) {}
             }
         }
